--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bit-youtube",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://aceofheart.github.io/bit-youtube/",
   "dependencies": {
     "gh-pages": "^1.1.0",
     "lodash": "^4.17.10",
@@ -15,6 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
